fix(tests): update tests for entity changes and constructor fixes
Phase 5 of spring-boot-quality-fix SDD

Changes:
- Fixed repository name references (ContentRepository -> ContentJpaRepository, etc.)
- Fixed constructor issues (services now use @RequiredArgsConstructor)
- Fixed enum usage in tests (UserRole.ROLE_USER, EpisodeStatus.READY)
- Removed obsolete JwtAuthenticationWebFilterTest.java (filter no longer exists)

12 test files updated:
- AdminUserServiceTest
- AuthServiceTest
- CatalogServiceTest
- HistoryServiceTest
- NotificationControllerTest
- NotificationServiceTest
- StreamControllerTest
- StreamServiceTest
- UploadControllerTest
- UploadServiceTest
- ProfileServiceTest
- UserServiceTest