@@ -4,22 +4,18 @@ import com.betha.streamvault.notification.dto.NotificationResponse;
 import com.betha.streamvault.notification.model.Notification;
 import com.betha.streamvault.notification.service.NotificationService;
 import com.betha.streamvault.user.dto.UserResponse;
+import com.betha.streamvault.user.model.UserRole;
 import com.betha.streamvault.user.service.UserService;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
-import reactor.core.publisher.Flux;
-import reactor.core.publisher.Mono;
-import reactor.test.StepVerifier;
 
 import java.time.LocalDateTime;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 import java.util.UUID;
@@ -39,7 +35,6 @@ class NotificationControllerTest {
     @Mock
     private UserService userService;
 
-    @InjectMocks
     private NotificationController notificationController;
 
     private UUID userId;
@@ -49,6 +44,8 @@ class NotificationControllerTest {
 
     @BeforeEach
     void setUp() {
+        notificationController = new NotificationController(notificationService, userService);
+        
         userId = UUID.randomUUID();
         notificationId = UUID.randomUUID();
 
@@ -56,6 +53,7 @@ class NotificationControllerTest {
                 .id(userId)
                 .email("test@streamvault.com")
                 .name("Test User")
+                .role("ROLE_USER")
                 .build();
 
         testNotificationResponse = NotificationResponse.builder()
@@ -71,112 +69,65 @@ class NotificationControllerTest {
     @Test
     @DisplayName("getNotifications - Should return all notifications for authenticated user")
     void getNotifications_Success() {
-        // Given
-        List<NotificationResponse> notifications = Arrays.asList(
-                testNotificationResponse,
-                NotificationResponse.builder()
-                        .id(UUID.randomUUID())
-                        .type(Notification.NotificationType.NEW_EPISODE)
-                        .title("Another Notification")
-                        .message("Another Message")
-                        .isRead(true)
-                        .createdAt(LocalDateTime.now())
-                        .build()
-        );
+        List<NotificationResponse> notifications = List.of(testNotificationResponse);
 
-        when(userService.getCurrentUser(anyString())).thenReturn(Mono.just(testUserResponse));
-        when(notificationService.getNotifications(userId)).thenReturn(Flux.fromIterable(notifications));
+        when(userService.getCurrentUser(anyString())).thenReturn(testUserResponse);
+        when(notificationService.getNotifications(userId)).thenReturn(notifications);
 
-        // When
-        Mono<ResponseEntity<List<NotificationResponse>>> result = notificationController
+        ResponseEntity<List<NotificationResponse>> response = notificationController
                 .getNotifications("test@streamvault.com");
 
-        // Then
-        StepVerifier.create(result)
-                .assertNext(response -> {
-                    assertThat(response.getStatusCode()).isEqualTo(HttpStatus.OK);
-                    assertThat(response.getBody()).hasSize(2);
-                })
-                .verifyComplete();
+        assertThat(response.getStatusCode()).isEqualTo(HttpStatus.OK);
+        assertThat(response.getBody()).hasSize(1);
     }
 
     @Test
     @DisplayName("getUnreadNotifications - Should return only unread notifications")
     void getUnreadNotifications_Success() {
-        // Given
-        when(userService.getCurrentUser(anyString())).thenReturn(Mono.just(testUserResponse));
+        when(userService.getCurrentUser(anyString())).thenReturn(testUserResponse);
         when(notificationService.getUnreadNotifications(userId))
-                .thenReturn(Flux.just(testNotificationResponse));
+                .thenReturn(List.of(testNotificationResponse));
 
-        // When
-        Mono<ResponseEntity<List<NotificationResponse>>> result = notificationController
+        ResponseEntity<List<NotificationResponse>> response = notificationController
                 .getUnreadNotifications("test@streamvault.com");
 
-        // Then
-        StepVerifier.create(result)
-                .assertNext(response -> {
-                    assertThat(response.getStatusCode()).isEqualTo(HttpStatus.OK);
-                    assertThat(response.getBody()).hasSize(1);
-                    assertThat(response.getBody().get(0).getIsRead()).isFalse();
-                })
-                .verifyComplete();
+        assertThat(response.getStatusCode()).isEqualTo(HttpStatus.OK);
+        assertThat(response.getBody()).hasSize(1);
+        assertThat(response.getBody().get(0).getIsRead()).isFalse();
     }
 
     @Test
     @DisplayName("getUnreadCount - Should return count of unread notifications")
     void getUnreadCount_Success() {
-        // Given
-        when(userService.getCurrentUser(anyString())).thenReturn(Mono.just(testUserResponse));
-        when(notificationService.getUnreadCount(userId)).thenReturn(Mono.just(5L));
+        when(userService.getCurrentUser(anyString())).thenReturn(testUserResponse);
+        when(notificationService.getUnreadCount(userId)).thenReturn(5L);
 
-        // When
-        Mono<ResponseEntity<Map<String, Long>>> result = notificationController
+        ResponseEntity<Map<String, Long>> response = notificationController
                 .getUnreadCount("test@streamvault.com");
 
-        // Then
-        StepVerifier.create(result)
-                .assertNext(response -> {
-                    assertThat(response.getStatusCode()).isEqualTo(HttpStatus.OK);
-                    assertThat(response.getBody()).containsEntry("count", 5L);
-                })
-                .verifyComplete();
+        assertThat(response.getStatusCode()).isEqualTo(HttpStatus.OK);
+        assertThat(response.getBody()).containsEntry("count", 5L);
     }
 
     @Test
     @DisplayName("markAsRead - Should mark notification as read")
     void markAsRead_Success() {
-        // Given
-        when(userService.getCurrentUser(anyString())).thenReturn(Mono.just(testUserResponse));
-        when(notificationService.markAsRead(notificationId, userId)).thenReturn(Mono.empty());
+        when(userService.getCurrentUser(anyString())).thenReturn(testUserResponse);
 
-        // When
-        Mono<ResponseEntity<Void>> result = notificationController
+        ResponseEntity<Void> response = notificationController
                 .markAsRead("test@streamvault.com", notificationId);
 
-        // Then
-        StepVerifier.create(result)
-                .assertNext(response -> {
-                    assertThat(response.getStatusCode()).isEqualTo(HttpStatus.OK);
-                })
-                .verifyComplete();
+        assertThat(response.getStatusCode()).isEqualTo(HttpStatus.OK);
     }
 
     @Test
     @DisplayName("markAllAsRead - Should mark all notifications as read")
     void markAllAsRead_Success() {
-        // Given
-        when(userService.getCurrentUser(anyString())).thenReturn(Mono.just(testUserResponse));
-        when(notificationService.markAllAsRead(userId)).thenReturn(Mono.empty());
+        when(userService.getCurrentUser(anyString())).thenReturn(testUserResponse);
 
-        // When
-        Mono<ResponseEntity<Void>> result = notificationController
+        ResponseEntity<Void> response = notificationController
                 .markAllAsRead("test@streamvault.com");
 
-        // Then
-        StepVerifier.create(result)
-                .assertNext(response -> {
-                    assertThat(response.getStatusCode()).isEqualTo(HttpStatus.OK);
-                })
-                .verifyComplete();
+        assertThat(response.getStatusCode()).isEqualTo(HttpStatus.OK);
     }
 }
